deform/static/css/form.css
/* ... */
input.checkbox, input.radio{
	display:block;
	margin:4px 0 0 0;
	padding:0;
	width:13px;
	height:13px;
}
input.other{
	margin:0 0 8px 25px;
}

.safari select.select{
	font-size:120% !important;
	margin:0 0 1px 0;
}
* html select.select{
	margin:1px 0;
}
*+html select.select{
	margin:1px 0;
	border:1px solid red;
}

/* ----- FILES ----- */

li.file a{
	color:#222;text-decoration:none;
}
li.file span{
	display:inline;float:none;
}
li.file img{
	display:block;float:left;margin:0 0 0 -10px;padding:5px 5px 7px 5px;
}
li.file .file-size, li.file .file-type{
	color:#666;font-size:85%;text-transform: uppercase;
}
li.file .file-name{
	display:block;
	padding:14px 0 0 0;
	color:blue;
	text-decoration:underline;
}
li.file .file-delete{
	color:red !important;font-size:85%;text-decoration:underline;
}
li.file a:hover .file-name{
	color:green !important;
}
li.file a:hover .file-name{
	color:green !important;
}

/* ----- BUTTONS ----- */

/* form li.buttons{ */
/* 	position:relative; */
/* 	clear:both; */
/* 	padding-top:10px; */
/* 	width:97% !important; */
/* } */

/* the above conflicts with the date input css (the button stays above
the dateinput info */

form li.buttons input{
	font-size:100%;
	margin-right: 5px;
}
input.btTxt{
	padding:0 7px;
	width:auto;
	overflow:visible;
}
.safari input.btTxt{
	font-size:120%;
}
.buttons .marker{
	position:absolute;
	top:0;
	right:0;
	padding:15px 10px 0 0;
	color:#000;
}
button.link{
	display:inline-block;
	border:none;
	background:none;
	color:blue;
	text-decoration:underline;
	cursor:pointer;
	padding:0;
	font-size:100%;
}
button.link:hover{
	color:green;
}

/* ----- TEXT DIRECTION ----- */

.rtl .info h2, .rtl .info div, .rtl label.desc, .rtl label.choice, 
.rtl div label, .rtl span label, .rtl input.text, 
.rtl textarea.textarea, .rtl select.select, .rtl p.instruct, 
.rtl .section h3, .rtl .section div, .rtl input.btTxt{
	direction:rtl;
}

/* ----- SIZES ----- */

.third{
	width:32% !important;
}
.half{
	width:48% !important;
}
.full{
	width:100% !important;
}

input.small, select.small{
	width:25%;
	min-width:25%;
}
input.medium, select.medium{
	width:50%;
	min-width:50%;
}
input.large, select.large, textarea.textarea{
	width:100%;
	min-width:100%;
}
select.ieSelectFix{ /* IE8 */
	width:auto\9;
}
* html select.ieSelectFix{ /* IE6 Only */
	width:100%;
}
*+html select.ieSelectFix{ /* IE7 Only */
	width:100%;
}

textarea.small{
	height:5.5em;
}
textarea.medium{
	height:10em;
}
textarea.large{
	height:20em;
}

/* ----- ERRORS ----- */

/* errorLi, errorMsgLbl, and errorMsg used to be id statements rather
than class statements(chrism) */

.errorLi{
	width:99%;
	margin:15px auto 0 auto;
	background:#fff !important;
	border:1px solid red;
	margin-bottom:1em;
	text-align:center;
	padding:1em 0 1em 0;
	-webkit-border-radius:20px;
	-moz-border-radius:20px;
}
.errorMsgLbl{
	margin:0 0 5px 0;
	padding:0;
	font-size:125%;
	color:#DF0000 !important;
}
.errorMsg{
	margin:0 0 2px 0;
	color:#000 !important;
	font-size:100%;
}
.errorMsg strong{
	padding:2px 3px;
	background-color: #FFDFDF !important;
	color:red !important;
}
form li.error{
	display:block !important;
	background-color: #FFDFDF !important;
	margin-bottom:3px !important;
}
form li.error label, form li.error span.symbol{
	color:#000 !important;
}
form li.error label.desc{
	color:#DF0000 !important;
}
form p.error{
	display:none;
	margin:0 !important;
	padding:7px 0 0 0 !important;
	line-height:10px !important;
	font-weight:bold;
	font-size:10px;
	color:#DF0000 !important;
	clear:both;
}
form li.error p.error{
	display:block;
}
form li.complex p.error{
	padding:0 0 9px 0 !important;
}
.leftLabel p.error, .rightLabel p.error{
	margin-left:30%;
	padding-left:15px;
}
.noI .leftLabel p.error, .noI .rightLabel p.error{
	margin-left:35%;
	padding-left:15px;
}

/* ----- REQUIRED ----- */

form span.req{
	display:inline;
	float:none;
	color:red !important;
	font-weight:bold;
	margin:0;
	padding:0;
}

/* ----- INSTRUCTIONS ----- */

form li.focused{
	background-color:#fff7c0;
	-webkit-box-shadow:rgba(0,0,0,.15) 1px 1px 2px;
	-moz-box-shadow:rgba(0,0,0,.15) 1px 1px 2px;
}
form li.focused, form li:hover{
	position:relative; /* Makes Instructs z-index stay on top in IE. */
}
form .instruct{
 	position:absolute;
	top:0;
	left:0;
	z-index:1000;
/* 	width:42%; */
	width:25%;
	margin:0 0 0 8px;
	padding:8px 10px 10px 10px;
	border:1px solid #e6e6e6;
	background:#f5f5f5;
	visibility:hidden;
	font-size:105%;
}
form .instruct small{
	line-height:120%;
	font-size:80%;
	color:#444;
}
form li.focused .instruct, form li:hover .instruct{
	left:100%; /* Prevent scrollbars for IE Instruct fix */
	visibility:visible;
}

/* ----- ADVANCED CLASSNAMES ----- */

.hideSeconds .seconds, .hideAMPM .ampm{
	display:none;
}

/* ----- ALT INSTRUCTIONS ----- */

.altInstruct .instruct, li.leftHalf .instruct, li.rightHalf .instruct,
li.leftThird .instruct, li.middleThird .instruct, li.rightThird .instruct,
.iphone .instruct{
	visibility:visible;
	position:static;
	margin:0;
	padding:6px 0 0 0;
	width:100%;
	clear:left;
	background:none !important;
	border:none !important;
	font-style:italic;
}
.altInstruct p.complex , li.leftHalf p.complex, li.rightHalf p.complex,
li.leftThird p.complex, li.middleThird p.complex, li.rightThird p.complex,
.iphone p.complex{
	padding:0 0 9px 0;
}

/* ----- LABEL LAYOUT ----- */

.leftLabel li, .rightLabel li{
	width:74% !important;
	padding-top:9px;
}
.leftLabel label.desc, .rightLabel label.desc{
	float:left;
	width:29%;
	margin:0px 15px 0 0;
}
.rightLabel label.desc{
	text-align:right;
}
.leftLabel li div.col, .rightLabel li div.col,
.leftLabel li.complex div, .rightLabel li.complex div{
	float:left;
}

.leftLabel li div.col, .rightLabel li div.col,
.leftLabel li.complex div, .rightLabel li.complex div{
	width:63%;
	min-width:63%;
}
.leftLabel .small, .rightLabel .small{
	width:23%;
	min-width:23%;
}
.leftLabel .medium, .rightLabel .medium{
	width:55%;
	min-width:55%;
}
/* ... */

